--- a/examples-gke/github-actions/ucsx/01_chart_ucsx/override_values.yaml
+++ b/examples-gke/github-actions/ucsx/01_chart_ucsx/override_values.yaml
@@ -37,6 +37,18 @@ service:
   env: {}
   annotations: {}
 
+ingress:
+  enabled: true
+  hosts:
+  - host: ucsx.${DOMAIN}
+    paths:
+    - path: /ucs/v3/
+      port: 8080
+    - path: /ucs/v10/
+      port: 8080
+    - path: /ucs/v3/config
+      port: 8500
+
 elasticsearch:
   url: http://elastic-es-http.infra.svc:9200
 
