--- a/examples-gke/github-actions/pulse/03_chart_init-tenant/override_values.yaml
+++ b/examples-gke/github-actions/pulse/03_chart_init-tenant/override_values.yaml
@@ -35,7 +35,7 @@ config:
   postgresSecretPassword: "META_DB_ADMINPWD"
 
 configurator:
-  enabled: false
+  enabled: true
   # set service domain used to access voice service
   voiceDomain: voice.svc.cluster.local
   # set service domain used to access ixn service
