--- a/examples-generic-kubernetes/github-actions/webrtc/01_chart_webrtc-service/override_values.yaml
+++ b/examples-generic-kubernetes/github-actions/webrtc/01_chart_webrtc-service/override_values.yaml
@@ -2,7 +2,6 @@
 # Global Webrtc parameters
 # https://all.docs.genesys.com/WebRTC/Current/WebRTCPEGuide/Configure
 ###############################################################################
-
 deployment:
   coturnService:
     annotations: {}
@@ -15,16 +14,21 @@ deployment:
     runAsNonRoot: false
     runAsUser: 0
     runAsGroup: 0
-  coturnDeployment:  internal
+  coturnDeployment:  external
   ingress:
     domain: ${DOMAIN}
+    ingressClassName: nginx
+    #ingressClassName: nginx-internal
     annotations:
-      kubernetes.io/ingress.class:               nginx
+      cert-manager.io/cluster-issuer:            letsencrypt-prod
+      #kubernetes.io/ingress.class:               nginx-internal
       nginx.ingress.kubernetes.io/affinity:      cookie
       nginx.ingress.kubernetes.io/affinity-mode: persistent
       nginx.ingress.kubernetes.io/ssl-redirect:  "true"
       nginx.ingress.kubernetes.io/session-cookie-path:     "/; Secure"
       nginx.ingress.kubernetes.io/session-cookie-samesite: None
+    tls:
+      secretName: webrtc-ingress-cert
   dnsPolicy: ClusterFirst
   dnsConfig:
     options:
@@ -33,10 +37,10 @@ deployment:
   keda: false
 
 monitoring:
-  enabled:           false
-  dashboards:        false
-  prometheusMetrics: false
-  prometheusAlerts:  false
+  enabled:           true
+  dashboards:        true
+  prometheusMetrics: true
+  prometheusAlerts:  true
 
 
 networkPolicies:
@@ -49,8 +53,8 @@ image:
     - pullsecret
   webrtc: $IMAGE_REGISTRY/webrtc
   coturn: $IMAGE_REGISTRY/webrtc
-  webrtcVersion: 100.0.016.0000
-  coturnVersion: 100.0.016.0000
+  webrtcVersion: 100.0.044.0000
+  coturnVersion: 100.0.044.0000
 
 
 gateway:
