--- a/examples-gke/github-actions/webrtc/01_chart_webrtc-service/override_values.yaml
+++ b/examples-gke/github-actions/webrtc/01_chart_webrtc-service/override_values.yaml
@@ -12,17 +12,21 @@ deployment:
   securityContext:
     runAsUser: 500
     runAsGroup: 500
-  coturnDeployment:  internal
+  coturnDeployment:  external
   ingress:
     domain: ${DOMAIN}
+    ingressClassName: nginx
+    #ingressClassName: nginx-internal
     annotations:
-      cert-manager.io/cluster-issuer:            selfsigned-cluster-issuer
-      kubernetes.io/ingress.class:               nginx
+      cert-manager.io/cluster-issuer:            letsencrypt-prod
+      #kubernetes.io/ingress.class:               nginx-internal
       nginx.ingress.kubernetes.io/affinity:      cookie
       nginx.ingress.kubernetes.io/affinity-mode: persistent
       nginx.ingress.kubernetes.io/ssl-redirect:  "true"
       nginx.ingress.kubernetes.io/session-cookie-path:     "/; Secure"
       nginx.ingress.kubernetes.io/session-cookie-samesite: None
+    tls:
+      secretName: webrtc-ingress-cert
   dnsPolicy: ClusterFirst
   dnsConfig:
     options:
@@ -47,8 +51,8 @@ image:
     - pullsecret
   webrtc: $IMAGE_REGISTRY/webrtc
   coturn: $IMAGE_REGISTRY/webrtc
-  webrtcVersion: 100.0.016.0000
-  coturnVersion: 100.0.016.0000
+  webrtcVersion: 100.0.044.0000
+  coturnVersion: 100.0.044.0000
 
 
 gateway:
