--- a/examples-gke/github-actions/tlm/01_chart_telemetry-service/override_values.yaml
+++ b/examples-gke/github-actions/tlm/01_chart_telemetry-service/override_values.yaml
@@ -7,10 +7,10 @@ namespace: $NS
 grafanaDashboard:
   enabled: true
 
-imagePullSecrets:
-    - name: pullsecret
-
 tlm:
+  image:
+    imagePullSecrets:
+      - name: pullsecret
   nodeSelector:
     genesysengage.com/nodepool:
   service:
