--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -13,8 +13,7 @@ body:
     attributes:
       label: What happened?
       description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what happened.
-      value: "A clear and concise description of what happened."
+      placeholder: A clear and concise description of what happened.
     validations:
       required: true
   - type: dropdown
