--- a/examples-openshift/github-actions/voice/10_chart_voice-sip/override_values.yaml
+++ b/examples-openshift/github-actions/voice/10_chart_voice-sip/override_values.yaml
@@ -39,13 +39,13 @@ secrets:
 # pvc will be created for logs
 volumes:
   pvcLog:
-    create: true
+    create: false
     claim: sip-log-pvc
     storageClass: standard-rwx
     volumeName:
 
   pvcJsonLog:
-    create: true
+    create: false
     claim: sip-json-log-pvc
     storageClass: standard-rwx
     volumeName:
