--- a/examples-gke/github-actions/monitoring/01_chart_kube-prometheus-stack/override_values.yaml
+++ b/examples-gke/github-actions/monitoring/01_chart_kube-prometheus-stack/override_values.yaml
@@ -17,7 +17,7 @@ prometheus:
     enabled: true
     annotations: 
       cert-manager.io/cluster-issuer: letsencrypt-prod
-      kubernetes.io/ingress.class: nginx-internal
+      kubernetes.io/ingress.class: nginx
     hosts:
     - prometheus.$DOMAIN
     tls:
@@ -30,7 +30,7 @@ alertmanager:
     enabled: true
     annotations: 
       cert-manager.io/cluster-issuer: letsencrypt-prod
-      kubernetes.io/ingress.class: nginx-internal
+      kubernetes.io/ingress.class: nginx
     hosts:
     - alert-manager.$DOMAIN
     tls:
