--- a/examples-gke/github-actions/monitoring/02_chart_grafana-operator/override_values.yaml
+++ b/examples-gke/github-actions/monitoring/02_chart_grafana-operator/override_values.yaml
@@ -11,7 +11,7 @@ grafana:
     hostname: grafana.$DOMAIN
     annotations: 
       cert-manager.io/cluster-issuer: letsencrypt-prod
-      kubernetes.io/ingress.class: nginx-internal
+      kubernetes.io/ingress.class: nginx
     tls: true
 
   dashboardLabelSelectors:
