--- a/examples-generic-kubernetes/github-actions/gws/02_chart_gws-ingress/01_release_gws-ingress/override_values.yaml
+++ b/examples-generic-kubernetes/github-actions/gws/02_chart_gws-ingress/01_release_gws-ingress/override_values.yaml
@@ -11,7 +11,7 @@ entryPoints:
       # Ingress annotations
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-prod
-      ingressClassName: nginx-internal
+      ingressClassName: nginx
       # Paths to ingress relative to hostname
       paths: ["/"]
       # Host names
