--- a/examples-gke/github-actions/logging/01_chart_elasticsearch/override_values.yaml
+++ b/examples-gke/github-actions/logging/01_chart_elasticsearch/override_values.yaml
@@ -15,7 +15,7 @@ kibana:
     hostname: kibana-logging.$DOMAIN
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
-      kubernetes.io/ingress.class: nginx-internal
+      kubernetes.io/ingress.class: nginx
     tls: true
 
 master:
