--- a/examples-gke/github-actions/gws/01_chart_gws-services/override_values.yaml
+++ b/examples-gke/github-actions/gws/01_chart_gws-services/override_values.yaml
@@ -39,13 +39,10 @@ gwsServices:
     context:
       env:
         GWS_PROVISIONING_COMMON_LOGLEVEL: info
-        GWS_SERVICE_AUTH_URL: http://gauth-auth.gauth:80
         GWS_SERVICE_CONF_URL: http://gws-service-proxy.gws:80
-        GWS_SERVICE_ENV_URL: http://gauth-environment.gauth:80
         GWS_SERVICE_VOICEMAIL_URL: http://voice-voicemail-service.voice.svc:8081/fs
         # Enables/disables SSL connection to PostgreSQL. Possible values: disable, prefer, require, verify-ca, verify-full
         PGSSLMODE: disable
-
         GWS_PROVISIONING_OBJECTCACHE_DB_TYPE: postgres
         GWS_PROVISIONING_SERVICES_AUTH_FOR_REDIRECT: https://gauth.${DOMAIN}
         GWS_PROVISIONING_OBJECTCACHE_POSTGRES_USER: $gws_as_pg_user
@@ -72,8 +69,6 @@ gwsServices:
         GWS_WORKSPACE_SERVICES_AUTH_FOR_REDIRECT: https://gauth.${DOMAIN}
         GWS_WORKSPACE_SERVER_USE_SECURE_COOKIE: true
         GWS_SECURE_COOKIE: true
-        GWS_SERVICE_AUTH_URL: http://gauth-auth.gauth:80
-        GWS_SERVICE_ENV_URL: http://gauth-environment.gauth:80
         GWS_SERVICE_VOICEMAIL_URL: http://voice-voicemail-service.voice.svc:8081/fs
         GWS_WORKSPACE_CONSUL_AUTH_ENV_DISABLED: true
 
@@ -106,8 +101,6 @@ gwsServices:
     context:
       env:
         GWS_CONFIGURATION_COMMON_DISCOVERY_TENANTS: true
-        GWS_SERVICE_AUTH_URL: http://gauth-auth.gauth:80
-        GWS_SERVICE_ENV_URL: http://gauth-environment.gauth:80
         GWS_CONFIGURATION_timeouts_environmentRefreshMs: 300000
         GWS_CONFIGURATION_cache_tenantRefreshIntervalMin: 1
         GWS_CS_CLUSTER_SUPPORT: true
@@ -126,8 +119,6 @@ gwsServices:
 
     context:
       env:
-        GWS_SERVICE_AUTH_URL: http://gauth-auth.gauth:80
-        GWS_SERVICE_ENV_URL: http://gauth-environment.gauth:80
         GWS_DATACOLLECTOR_timeouts_environmentRefreshMs: 300000
 
   gwsPlatformIxn:
@@ -144,8 +135,6 @@ gwsServices:
 
     context:
       env:
-        GWS_SERVICE_AUTH_URL: http://gauth-auth.gauth:80
-        GWS_SERVICE_ENV_URL: http://gauth-environment.gauth:80
         GWS_IXN_timeouts_environmentRefreshMs: 60000
 
   gwsPlatformOcs:
@@ -163,8 +152,6 @@ gwsServices:
     context:
       env:
         GWS_OCS_timeouts_environmentRefreshMs: 300000
-        GWS_SERVICE_AUTH_URL: http://gauth-auth.gauth:80
-        GWS_SERVICE_ENV_URL: http://gauth-environment.gauth:80
 
   gwsPlatformSetting:
     deployment:
@@ -180,8 +167,6 @@ gwsServices:
 
     context:
       env:
-        GWS_SERVICE_AUTH_URL: http://gauth-auth.gauth:80
-        GWS_SERVICE_ENV_URL: http://gauth-environment.gauth:80
         GWS_SETTING_timeouts_environmentRefreshMs: 300000
 
   gwsPlatformStatistics:
@@ -198,8 +183,6 @@ gwsServices:
 
     context:
       env:
-        GWS_SERVICE_AUTH_URL: http://gauth-auth.gauth:80
-        GWS_SERVICE_ENV_URL: http://gauth-environment.gauth:80
         GWS_STATISTICS_timeouts_environmentRefreshMs: 300000
 
   gwsPlatformUcs:
@@ -219,8 +202,6 @@ gwsServices:
 
     context:
       env:
-        GWS_SERVICE_AUTH_URL: http://gauth-auth.gauth:80
-        GWS_SERVICE_ENV_URL: http://gauth-environment.gauth:80
         GWS_VOICE_timeouts_requestTimeoutMs: 30000
         GWS_VOICE_timeouts_environmentRefreshMs: 10000
         GWS_AUTH_COMMON_ENV_SERVICE: http://gauth-environment.gauth:80
@@ -234,13 +215,17 @@ gwsServices:
     deployment:
       replicaCount: 1
 
-
+### 3rd Party services
 consul:
   # Port of local Consul agent
   port: 8500
   # Prefix to locate GWS data in the Consul KV storage
   kv_prefix: "gws"
-
+gauth:
+  # URL of Genesys Authentication Service
+  authUrl: http://gauth-auth.gauth:80
+  # URL of Genesys Environment Service
+  envUrl: http://gauth-environment.gauth:80
 prometheus:
   # Enables annotation based discovery to scrape metrics
   metricServer:
